    Thanks to Niels Thykier <niels@thykier.net>. Closes: #677631
  * Document in more detail in deb(5) the supported ar archive format.
  * Document in deb-src-control(5) the “Private-” field prefix.
  * Add new start-stop-daemon --no-close option to disable closing file
    descriptors on --background. Closes: #627333, #64642
  * Switch source compression to xz.

  [ Updated dpkg translations ]
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Fri, 08 Jun 2012 09:39:42 +0200

dpkg (1.16.4.3) unstable; urgency=low

  * On «update-alternatives --install» only warn for now on out of range
    priorities and clamp the values, as there seems to be packages using
    priorities > INT_MAX, which although bogus as they were previously
    overflowing the int used to store them, that would cause installation
    failures when upgrading from squeeze. This will be reverted to an
    error after wheezy. Closes: #676874

 -- Guillem Jover <guillem@debian.org>  Sun, 17 Jun 2012 10:56:15 +0200

dpkg (1.16.4.2) unstable; urgency=low

  * Check correctly for out of range negative field width values in dpkg-query
    --show format strings. Regression introduced in 1.16.4. Closes: #676796

 -- Guillem Jover <guillem@debian.org>  Sat, 09 Jun 2012 16:16:17 +0200

dpkg (1.16.4.1) unstable; urgency=low

  * Fix explicit file trigger activation. Regression introduced in 1.16.4.
    Closes: #676684

 -- Guillem Jover <guillem@debian.org>  Fri, 08 Jun 2012 23:17:11 +0200

dpkg (1.16.4) unstable; urgency=low

  [ Guillem Jover ]
  * Deprecate compressing .deb files with lzma, by making dpkg-deb issue a
    warning, as the format has several deficiencies that have been addressed