@@ -30,6 +30,8 @@ dpkg (1.16.5) UNRELEASED; urgency=low
   * Add new start-stop-daemon --no-close option to disable closing file
     descriptors on --background. Closes: #627333, #64642
   * Switch source compression to xz.
+  * Detect ar header fields truncation due to too long member names or too
+    large member sizes. Closes: #678933
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
